[gd_scene load_steps=5 format=3 uid="uid://63xj1ottp7nk"]

[ext_resource type="Texture2D" uid="uid://di3svfhvsggop" path="res://ui/waypoint/waypoint.svg" id="1_omi4o"]
[ext_resource type="Script" path="res://entities/default/spawner/spawner.gd" id="1_rcdcp"]
[ext_resource type="Material" uid="uid://dxgea0csu46c7" path="res://shaders/pixelate.tres" id="2_ivymu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8goo"]
size = Vector2(16, 16)

[node name="Spawner" type="Area2D"]
position = Vector2(192, 128)
collision_layer = 0
collision_mask = 4
script = ExtResource("1_rcdcp")
time_to_spawn = 3
shader_material = ExtResource("2_ivymu")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_m8goo")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.125, 0.125)
texture = ExtResource("1_omi4o")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
